--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -8,12 +8,13 @@
     TVs: 1201px, and more.
 */
 
-@media screen and (min-width: 525px) and (max-width: 768px) {
-    body {
+@media screen and (min-width: 525px) and (max-width: 768px) { /*tablets*/
+    body { 
         background-image: linear-gradient(to top, #49a09d, #5f2c82);
     }
     section#login {
         width: 80vw;
+        height: 300px;
     }
     section#login > div#imagem {
         float: left;
@@ -25,12 +26,13 @@
         width: 70%;
     }
 }
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 769px) { /*telas grandes*/
     body {
         background-image: linear-gradient(to top, #49a09d, #5f2c82);
     }
     section#login {
         width: 700px;
+        height: 400px;
     }
     section#login > div#imagem {
         float: right;
@@ -45,6 +47,7 @@
         font-size: 2em;
     }
     div#formulario > p {
-        font-size: 1.2em;
+        font-size: 1em;
+        margin: 20px 0px;
     }
 }
