--- a/mysite/base/templates/base/index.html
+++ b/mysite/base/templates/base/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Login</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-    <link rel="stylesheet" href="../../static/css/style.css">
-    <link rel="stylesheet" href="../../static/css/media-query.css">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/media-query.css' %}">
 </head>
 <body>
     <main>
@@ -19,22 +19,31 @@
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
-                <form action="login.php" method="post" autocomplete="on">
+                <form method="post" autocomplete="on">
+                    {% csrf_token %}
                     <div class="campo">
                         <span class="material-symbols-outlined">
                             person
                         </span>
-                        <input type="email" name="login" id="ilogin" placeholder="email" autocomplete="email" required maxlength="40">
-                        <label for="ilogin">
-                            Logim
-                        </label>
+                        {{ form.nome }}
+                    </div>
+                    <div class="campo">
+                        <span class="material-symbols-outlined">
+                            Mail
+                        </span>
+                        {{ form.email }}
                     </div>
                     <div class="campo">
                         <span class="material-symbols-outlined">
                             vpn_key
                         </span>
-                        <input type="password" name="senha" id="isenha" placeholder="senha" autocomplete="current-password" required minlength="8" maxlength="40">
-                        <label for="isenha">Senha</label>
+                        {{ form.senha }}
+                    </div>
+                    <div class="campo">
+                        <span class="material-symbols-outlined">
+                            123
+                        </span>
+                        {{ form.idade }}
                     </div>
                     <input type="submit" value="Entrar">
                     <a href="esqueci.html" class="botao">Esqueci a senha <span class="material-symbols-outlined">mail</span> </a>
