--- a/mysite/base/static/css/style.css
+++ b/mysite/base/static/css/style.css
@@ -120,3 +120,29 @@ form > a.botao:hover {
 form > a.botao > span {
     font-size: 0.8em;
 }
+
+.link {
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    padding-top: 5px;
+    margin-top: 5px;
+    background-color: white;
+    color: #2d6462;
+    border: 1px solid #49a09d;
+    border-radius: 7px;
+    text-decoration: none;
+}
+.link:hover {
+    background-color: #6cd3cf;
+}
+.form {
+    background-color: #94cfcd;
+    font-size: 1em;
+    width: 80%;
+    height: 100%;
+    border-radius: 8px;
+    padding: 4px;
+}
