--- a/mysite/base/templates/base/index.html
+++ b/mysite/base/templates/base/index.html
@@ -1,55 +1,37 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto Login</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <link rel="stylesheet" href="{% static 'css/media-query.css' %}">
-</head>
-<body>
-    <main>
-        <section id="login">
-            <div id="imagem">
-                <!-- Aqui vai a imagem nas CSS -->
-            </div>
-            <div id="formulario">
-                <h1>Login</h1>
-                <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
-                <form method="post" autocomplete="on">
-                    {% csrf_token %}
-                    <div class="campo">
-                        <span class="material-symbols-outlined">
-                            person
-                        </span>
-                        {{ form.nome }}
-                    </div>
-                    <div class="campo">
-                        <span class="material-symbols-outlined">
-                            Mail
-                        </span>
-                        {{ form.email }}
-                    </div>
-                    <div class="campo">
-                        <span class="material-symbols-outlined">
-                            vpn_key
-                        </span>
-                        {{ form.senha }}
-                    </div>
-                    <div class="campo">
-                        <span class="material-symbols-outlined">
-                            123
-                        </span>
-                        {{ form.idade }}
-                    </div>
-                    <input type="submit" value="Entrar">
-                    <a href="esqueci.html" class="botao">Esqueci a senha <span class="material-symbols-outlined">mail</span> </a>
-                </form>
-            </div>
-        </section>
-    </main>
-</body>
-</html>
+{% extends 'base/base.html' %}
+
+{% block title %}Página Inicial{% endblock %}
+
+{% block content %}
+    <h1>Login</h1>
+    <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
+    <form method="post" autocomplete="on">
+        {% csrf_token %}
+        <div class="campo">
+            <span class="material-symbols-outlined">
+                person
+            </span>
+            {{ form.nome }}
+        </div>
+        <div class="campo">
+            <span class="material-symbols-outlined">
+                Mail
+            </span>
+            {{ form.email }}
+        </div>
+        <div class="campo">
+            <span class="material-symbols-outlined">
+                vpn_key
+            </span>
+            {{ form.senha }}
+        </div>
+        <div class="campo">
+            <span class="material-symbols-outlined">
+                123
+            </span>
+            {{ form.idade }}
+        </div>
+        <input type="submit" value="Entrar">
+        <a href="{% url 'base:esqueci' %}" class="botao">Esqueci a senha <span class="material-symbols-outlined">mail</span> </a>
+    </form>
+{% endblock %}
